<resources>
    <string name="app_name">BakingApp</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="background_gradient">Background Gradient</string>

    <string-array name="list_images_url">
        <item>https://sallysbakingaddiction.com/wp-content/uploads/2016/10/nutella-tart-3.jpg</item>
        <item>https://i.ytimg.com/vi/lIb_741_dIw/maxresdefault.jpg</item>
        <item>https://d2gk7xgygi98cy.cloudfront.net/4587-3-large.jpg</item>
        <item>https://www.seriouseats.com/recipes/images/2017/06/20170526-no-bake-cheesecake-vicky-wasik-18-1500x1125.jpg</item>
    </string-array>

    <string name="button_start_cooking">Start Cooking</string>
    <string name="button_previous_step">Previous Step</string>
    <string name="button_next_step">Next Step</string>
    <string name="buton_icon_play">Play</string>

    <string name="recipe_background_view">Background View</string>
    <string name="recipe_block_serves">Serves</string>
    <string name="recipe_block_ingredients">Ingredients</string>
    <string name="recipe_block_steps">Steps</string>

    <string name="icon_arrow">Arrow</string>
    <string name="icon_like">Like</string>
    <string name="icon_add">Add</string>
    <string name="icon_remove">Remove</string>

    <string name="fake_text_likes">150 Likes</string>
    <string name="recipe_individual_step">Step</string>
    <string name="no_visual_information_available">No Visual Information Available</string>
    <string name="no_description_available">No Description Available</string>

    <string name="toast_no_previous_step">There is no previous step</string>
    <string name="toast_no_next_step">This is the final step</string>
    <string name="toast_minimum_servings">Ingredients are for at least one person</string>
    <string name="toast_maximum_servings">Ingredients are for maximum 12 people</string>


    //Widget
    <string name="line">Line</string>
    <string name="add_widget">Add widget</string>
    <string name="back_to_recipes">Back to Recipes</string>
</resources>
