<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_master_main_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/recipe_master_background_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="@color/colorAccent"
        android:contentDescription="@string/recipe_background_view"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/recipe_master_button_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/recipe_master_button_view"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/recipe_master_foreground_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Title-->
            <View
                android:id="@+id/recipe_master_background_drop"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/backdrop_gradient"
                app:layout_constraintVertical_weight="1"
                tools:background="@drawable/backdrop_gradient" />

            <TextView
                android:id="@+id/recipe_master_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_xxxlarge"
                android:layout_marginLeft="@dimen/margin_xxlarge"
                android:layout_marginStart="@dimen/margin_xxlarge"
                android:fontFamily="@font/comfortaa_bold"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_headline"
                app:layout_constraintBottom_toBottomOf="@id/recipe_master_background_drop"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:targetApi="jelly_bean"
                tools:text="@string/list_nutella_pie" />

            <ImageView
                android:id="@+id/recipe_master_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon_arrow"
                android:src="@drawable/arrow"
                app:layout_constraintBottom_toBottomOf="@id/recipe_master_background_drop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/recipe_master_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@id/recipe_master_background_drop">

                <!--Like-->
                <LinearLayout
                    android:id="@+id/recipe_master_like_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/recipe_master_like_icon"
                        android:layout_width="@dimen/container_xsmall"
                        android:layout_height="@dimen/container_xsmall"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:layout_marginRight="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:contentDescription="@string/icon_like"
                        android:src="@drawable/baseline_favorite_24px" />

                    <TextView
                        android:id="@+id/recipe_master_like_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:fontFamily="@font/comfortaa"
                        android:text="@string/fake_text_likes"
                        android:textSize="@dimen/text_body"
                        tools:targetApi="jelly_bean" />
                </LinearLayout>

                <View
                    android:id="@+id/recipe_master_like_line"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/container_line"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:background="@color/colorText"
                    app:layout_constraintTop_toBottomOf="@id/recipe_master_like_layout" />

                <!--Serves-->
                <TextView
                    android:id="@+id/recipe_master_heading_serves"
                    style="@style/TextRecipeMasterTitle"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/recipe_block_serves"
                    app:layout_constraintTop_toBottomOf="@id/recipe_master_like_line" />

                <android.support.v7.widget.CardView
                    android:id="@+id/recipe_master_card_serves"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/container_regular_large"
                    android:layout_marginTop="@dimen/margin_large"
                    app:layout_constraintTop_toBottomOf="@id/recipe_master_heading_serves">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/recipe_master_icon_remove_serving"
                            android:layout_width="@dimen/container_small"
                            android:layout_height="@dimen/container_small"
                            android:layout_marginEnd="@dimen/margin_xxxlarge"
                            android:layout_marginRight="@dimen/margin_xxxlarge"
                            android:contentDescription="@string/icon_remove"
                            android:src="@drawable/baseline_remove_circle_outline_24px" />

                        <TextView
                            android:id="@+id/recipe_master_text_serves"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/comfortaa_bold"
                            android:textColor="@color/colorText"
                            android:textSize="@dimen/text_title"
                            tools:targetApi="jelly_bean" />

                        <ImageView
                            android:id="@+id/recipe_master_icon_add_serving"
                            android:layout_width="@dimen/container_small"
                            android:layout_height="@dimen/container_small"
                            android:layout_marginLeft="@dimen/margin_xxxlarge"
                            android:layout_marginStart="@dimen/margin_xxxlarge"
                            android:contentDescription="@string/icon_add"
                            android:src="@drawable/baseline_add_circle_outline_24px" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--Ingredients-->
                <TextView
                    android:id="@+id/recipe_master_heading_ingredients"
                    style="@style/TextRecipeMasterTitle"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/recipe_block_ingredients"
                    app:layout_constraintTop_toBottomOf="@id/recipe_master_card_serves" />

                <android.support.v7.widget.CardView
                    android:id="@+id/recipe_master_card_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    app:layout_constraintTop_toBottomOf="@id/recipe_master_heading_ingredients">

                    <LinearLayout
                        android:id="@+id/recipe_master_ingredients_linear_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" />
                </android.support.v7.widget.CardView>

                <!--Steps-->
                <TextView
                    android:id="@+id/recipe_master_heading_steps"
                    style="@style/TextRecipeMasterTitle"
                    android:text="@string/recipe_block_steps"
                    app:layout_constraintTop_toBottomOf="@id/recipe_master_card_ingredients" />

                <android.support.v7.widget.CardView
                    android:id="@+id/recipe_master_card_steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    app:layout_constraintTop_toBottomOf="@id/recipe_master_heading_steps">

                    <LinearLayout
                        android:id="@+id/recipe_master_steps_linear_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" />
                </android.support.v7.widget.CardView>

                <View
                    android:id="@+id/recipe_master_filler_container"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/container_large"
                    android:background="@color/colorAccent"
                    app:layout_constraintTop_toBottomOf="@id/recipe_master_card_steps" />

            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/recipe_master_button_view"
        style="@style/TextButton"
        android:text="@string/button_start_cooking"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>